# sdm-contributor-notifier

./: README.md
contributor_notifier/: pyproject.toml
contributor_notifier/contributor_notifier/: main.py
contributor_notifier/contributor_notifier/utils/: github.py  utils.py
